# test-radar

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.cfg
.github/workflows/: django.yml
config/: config.toml.example
pytest_radar/: plugin.py
src/api/: urls.py  views.py
src/api/serializers/: record.py
src/auth/: admin.py  models.py
src/auth/migrations/: 0001_initial.py
src/gui/: urls.py  views.py
src/gui/templates/: base.html  index.html  test_info.html
src/records/: admin.py  models.py
src/records/migrations/: 0001_initial.py
src/records/srv/: record.py
src/server/: settings.py  urls.py
tests/: conftest.py  fixtures.py  test_radar_plugin.py
tests/it/api/: test_views.py
tests/it/gui/: test_views.py
tests/unit/records/: test_srv.py
