[project]
name = "test-radar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.3",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.2.0",
    "flake8-aaa>=0.17.0",
    "mypy>=1.16.0",
    "ondivi>=0.7.2",
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
    "wemake-python-styleguide>=1.1.0",
]
test = [
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "server.settings"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN101",
  "D100",
  "D101",
  "D102",
  "D104",
  "D106",
  "D203",
  "D213",
  "Q000",
  "RUF012",
  "S105"
]
exclude = [
  "manage.py",
  "*/migrations/*"
]

[tool.ruff.format]
quote-style = "single"
